--- a/view/css/output.css
+++ b/view/css/output.css
@@ -644,6 +644,10 @@ video {
   left: 50%;
 }
 
+.left-2{
+  left: 0.5rem;
+}
+
 .left-\[230px\]{
   left: 230px;
 }
@@ -668,8 +672,16 @@ video {
   top: 50%;
 }
 
+.top-5{
+  top: 1.25rem;
+}
+
 .top-full{
   top: 100%;
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .z-50{
@@ -738,6 +750,10 @@ video {
   margin-top: 0.5rem;
 }
 
+.mt-2\.5{
+  margin-top: 0.625rem;
+}
+
 .mt-3{
   margin-top: 0.75rem;
 }
@@ -760,6 +776,10 @@ video {
 
 .mt-9{
   margin-top: 2.25rem;
+}
+
+.mt-\[30px\]{
+  margin-top: 30px;
 }
 
 .box-content{
@@ -792,6 +812,10 @@ video {
 
 .\!h-\[70px\]{
   height: 70px !important;
+}
+
+.h-10{
+  height: 2.5rem;
 }
 
 .h-12{
@@ -923,8 +947,16 @@ video {
   width: 1480px;
 }
 
+.w-\[150px\]{
+  width: 150px;
+}
+
 .w-\[170px\]{
   width: 170px;
+}
+
+.w-\[200px\]{
+  width: 200px;
 }
 
 .w-\[222px\]{
@@ -1053,6 +1085,10 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
 .grid-cols-4{
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -1148,6 +1184,10 @@ video {
        column-gap: 50px;
 }
 
+.gap-y-1{
+  row-gap: 0.25rem;
+}
+
 .gap-y-2{
   row-gap: 0.5rem;
 }
@@ -1220,6 +1260,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-sm{
+  border-radius: 0.125rem;
+}
+
 .rounded-xl{
   border-radius: 0.75rem;
 }
@@ -1276,6 +1320,11 @@ video {
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
 
+.border-blue-700{
+  --tw-border-opacity: 1;
+  border-color: rgb(29 78 216 / var(--tw-border-opacity));
+}
+
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1325,9 +1374,19 @@ video {
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
+.bg-blue-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
 .bg-blue-400{
   --tw-bg-opacity: 1;
   background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-blue-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 246 255 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -1374,6 +1433,11 @@ video {
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
+.bg-red-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
+}
+
 .bg-red-500{
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
@@ -1387,6 +1451,11 @@ video {
 .bg-yellow-100{
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
 }
 
 .\!p-\[5px\]{
@@ -1420,6 +1489,11 @@ video {
 .px-1{
   padding-left: 0.25rem;
   padding-right: 0.25rem;
+}
+
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .px-2{
@@ -1498,6 +1572,14 @@ video {
 
 .pb-5{
   padding-bottom: 1.25rem;
+}
+
+.pl-1{
+  padding-left: 0.25rem;
+}
+
+.pl-10{
+  padding-left: 2.5rem;
 }
 
 .pl-2{
@@ -1628,9 +1710,19 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-blue-300{
+  --tw-text-opacity: 1;
+  color: rgb(147 197 253 / var(--tw-text-opacity));
+}
+
 .text-blue-500{
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-blue-700{
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
 .text-gray-400{
@@ -1666,6 +1758,16 @@ video {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
+.text-red-700{
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+
+.text-sky-500{
+  --tw-text-opacity: 1;
+  color: rgb(14 165 233 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -1745,6 +1847,11 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.shadow-gray-700{
+  --tw-shadow-color: #374151;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1769,6 +1876,10 @@ video {
 
 .duration-700{
   transition-duration: 700ms;
+}
+
+.file\:mr-3::file-selector-button{
+  margin-right: 0.75rem;
 }
 
 .hover\:-translate-x-1:hover{
